@@ -16,21 +16,24 @@
  * specific language governing permissions and limitations
  * under the License.
  */
-package io.mandrel.data.spider;
+package io.mandrel.controller;
 
-import io.mandrel.blob.BlobStores;
+import io.mandrel.command.Commands;
+import io.mandrel.command.Commands.CommandGroup;
 import io.mandrel.common.data.Spider;
 import io.mandrel.common.data.State;
 import io.mandrel.data.filters.link.AllowedForDomainsFilter;
 import io.mandrel.data.filters.link.SkipAncorFilter;
 import io.mandrel.data.filters.link.UrlPatternFilter;
 import io.mandrel.data.source.FixedSource.FixedSourceDefinition;
-import io.mandrel.document.DocumentStores;
+import io.mandrel.data.validation.Validators;
+import io.mandrel.frontier.FrontierClient;
 import io.mandrel.timeline.SpiderEvent;
 import io.mandrel.timeline.SpiderEvent.SpiderEventType;
 import io.mandrel.timeline.TimelineService;
+import io.mandrel.worker.WorkerClient;
 
-import java.net.URL;
+import java.net.URI;
 import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.List;
@@ -46,23 +49,21 @@ import lombok.extern.slf4j.Slf4j;
 
 import org.kohsuke.randname.RandomNameGenerator;
 import org.springframework.stereotype.Component;
-import org.springframework.validation.BeanPropertyBindingResult;
 import org.springframework.validation.BindException;
 import org.springframework.validation.BindingResult;
-import org.springframework.validation.Validator;
-
-import com.google.common.base.Throwables;
 
 @Component
 @Slf4j
 @RequiredArgsConstructor(onConstructor = @__(@Inject))
-public class SpiderService {
+public class ControllerService {
 
-	private final SpiderRepository spiderRepository;
+	private final ControllerRepository spiderRepository;
 
 	private final TimelineService timelineService;
 
-	private Validator spiderValidator = new SpiderValidator();
+	private final FrontierClient frontierClient;
+
+	private final WorkerClient workerClient;
 
 	private RandomNameGenerator generator = new RandomNameGenerator();
 
@@ -77,26 +78,16 @@ public class SpiderService {
 	@PostConstruct
 	public void init() {
 
-		// TODO Start the available spiders on this node
-		// spiderRepository.list().filter(spider ->
-		// State.STARTED.equals(spider.getState())).forEach(spider -> {
-		// taskService.executeOnLocalMember(String.valueOf(spider.getId()), new
-		// SpiderTask(spider));
+		// TODO Load the existing spiders from the database
 
-		// TODO manage sources!œ
-		// spider.getSources().stream().forEach(prepareSource(spider.getId(),
-		// spider));
-		// });
-	}
+		// TODO Prepare and initiate the spiders, build the containers
 
-	public BindingResult validate(Spider spider) {
-		BindingResult errors = new BeanPropertyBindingResult(spider, "spider");
-		spiderValidator.validate(spider, errors);
-		return errors;
+		// TODO Load the journal of commands
+
 	}
 
 	public Spider update(Spider spider) throws BindException {
-		BindingResult errors = validate(spider);
+		BindingResult errors = Validators.validate(spider);
 
 		if (errors.hasErrors()) {
 			errors.getAllErrors().stream().forEach(oe -> log.info(oe.toString()));
@@ -125,11 +116,7 @@ public class SpiderService {
 
 		// Add filters
 		spider.getFilters().getForLinks().add(new AllowedForDomainsFilter().domains(urls.stream().map(url -> {
-			try {
-				return new URL(url).getHost();
-			} catch (Exception e) {
-				throw Throwables.propagate(e);
-			}
+			return URI.create(url).getHost();
 		}).collect(Collectors.toList())));
 		spider.getFilters().getForLinks().add(new SkipAncorFilter());
 		spider.getFilters().getForLinks().add(UrlPatternFilter.STATIC);
@@ -138,7 +125,7 @@ public class SpiderService {
 	}
 
 	public Spider add(Spider spider) throws BindException {
-		BindingResult errors = validate(spider);
+		BindingResult errors = Validators.validate(spider);
 
 		if (errors.hasErrors()) {
 			errors.getAllErrors().stream().forEach(oe -> log.info(oe.toString()));
@@ -163,84 +150,82 @@ public class SpiderService {
 	}
 
 	public Optional<Spider> start(long spiderId) {
-		return get(spiderId).map(spider -> {
+		return get(spiderId).map(
+				spider -> {
 
-			if (State.STARTED.equals(spider.getState())) {
-				return spider;
-			}
+					if (State.STARTED.equals(spider.getState())) {
+						return spider;
+					}
 
-			if (State.CANCELLED.equals(spider.getState())) {
-				throw new RuntimeException("Spider cancelled!");
-			}
+					if (State.KILLED.equals(spider.getState())) {
+						throw new RuntimeException("Spider cancelled!");
+					}
 
-			// TODO
-			// if (spider.getClient().getPoliteness().isUseSitemaps()) {
-			// spider.getSources().add(new SitemapsSource(url));
-			// }
+					CommandGroup startCommand = Commands.groupOf(
+					// Create the dedicated frontier
+							Commands.prepareFrontier(frontierClient, spider),
+							// Deploy the spider on the workers
+							Commands.prepareWorker(workerClient, spider),
+							// Start the frontier
+							Commands.startFrontier(frontierClient, spider),
+							// Start the workers
+							Commands.startWorker(workerClient, spider));
 
-				// spider.getSources().stream().filter(s ->
-				// s.check()).forEach(prepareSource(spiderId, spider));
+					startCommand.apply();
 
-				// taskService.prepareSimpleExecutor(String.valueOf(spiderId));
+					spider.setState(State.STARTED);
+					spider.setStarted(LocalDateTime.now());
+					spiderRepository.update(spider);
 
-				// Call workers
-				// taskService.executeOnAllMembers(String.valueOf(spiderId), new
-				// SpiderTask(spider));
+					timelineService.add(new SpiderEvent().setSpiderId(spider.getId()).setSpiderName(spider.getName()).setType(SpiderEventType.SPIDER_STARTED)
+							.setTime(LocalDateTime.now()));
 
-				spider.setState(State.STARTED);
-				spider.setStarted(LocalDateTime.now());
-				spiderRepository.update(spider);
+					return spider;
 
-				timelineService.add(new SpiderEvent().setSpiderId(spider.getId()).setSpiderName(spider.getName()).setType(SpiderEventType.SPIDER_STARTED)
-						.setTime(LocalDateTime.now()));
-
-				return spider;
-
-			});
+				});
 	}
 
-	public Optional<Spider> cancel(long spiderId) {
+	public Optional<Spider> kill(long spiderId) {
 		return get(spiderId).map(spider -> {
 
-			// TODO taskService.shutdownAllExecutorService(spider);
+			CommandGroup killCommand = Commands.groupOf(
+			// Kill the workers
+					Commands.killWorker(workerClient, spider),
+					// Kill the frontier
+					Commands.killFrontier(frontierClient, spider));
 
-				// Update status
+			killCommand.apply();
+
+			// Update status
 				spider.setCancelled(LocalDateTime.now());
-				spider.setState(State.CANCELLED);
+				spider.setState(State.KILLED);
 
-				timelineService.add(new SpiderEvent().setSpiderId(spider.getId()).setSpiderName(spider.getName()).setType(SpiderEventType.SPIDER_CANCELLED)
+				timelineService.add(new SpiderEvent().setSpiderId(spider.getId()).setSpiderName(spider.getName()).setType(SpiderEventType.SPIDER_KILLED)
 						.setTime(LocalDateTime.now()));
 
-				return spiderRepository.update(spider);
-			});
-	}
-
-	public Optional<Spider> end(long spiderId) {
-		return get(spiderId).map(spider -> {
-
-			// TODO taskService.shutdownAllExecutorService(spider);
-
-				// Update status
-				spider.setEnded(LocalDateTime.now());
-				spider.setState(State.ENDED);
 				return spiderRepository.update(spider);
 			});
 	}
 
 	public Optional<Spider> delete(long spiderId) {
 		return get(spiderId).map(spider -> {
-			// TODO taskService.shutdownAllExecutorService(spider);
 
-				// Delete data
-				BlobStores.get(spiderId).ifPresent(b -> b.deleteAll());
-				DocumentStores.get(spiderId).ifPresent(d -> d.entrySet().forEach(e -> {
-					e.getValue().deleteAll();
-				}));
+			CommandGroup killCommand = Commands.groupOf(
+			// Kill the workers
+					Commands.killWorker(workerClient, spider),
+					// Kill the frontier
+					Commands.killFrontier(frontierClient, spider));
 
-				// Remove spider
-				spiderRepository.delete(spiderId);
+			killCommand.apply();
 
-				return spider;
+			// Update status
+				spider.setCancelled(LocalDateTime.now());
+				spider.setState(State.DELETED);
+
+				timelineService.add(new SpiderEvent().setSpiderId(spider.getId()).setSpiderName(spider.getName()).setType(SpiderEventType.SPIDER_DELETED)
+						.setTime(LocalDateTime.now()));
+
+				return spiderRepository.update(spider);
 			});
 	}
 }
